corrected grammatical mistakes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I did BE in computer science from Maharaja Sayajirao University of Baroda in 2021. Currenly I am software engineer at wisedv inc. My area of interest majorly in fullstack web development. I also enthusiastic towards learning new things in networking fields like webrtc. I have decent knowlege of all core CS subjects. My specialities include quickly learning new programming languages, new skills, hardworking, time punctual and problem solver. </p>
+          <p>I did BE in computer science from Maharaja Sayajirao University of Baroda in 2021. Currenly I am software engineer at wisedv inc. My area of interest is majorly in fullstack web development. I am also enthusiastic towards learning new things in networking fields like webrtc. I have decent knowlege of all core CS subjects. My specialities include quickly learning new programming languages, new skills, hardworking, time punctual and problem solver. </p>
         </div>
 
         <div class="row">
